--- a/start.html
+++ b/start.html
@@ -23,10 +23,12 @@
     </header>
     <section>
         
-            <button class="btn" onclick="music()">A题</button>
-            <button class="btn" onclick="words()">B题</button>
-        <form action="https://www.bilibili.com/video/BV1Jg411N77r/?vd_source=5c89f29600edbf344cff3cfe932ab5f2" target="_blank">
-            <button class="btn">C题</button>
+            <button class="btn" onclick="chuan()">A题</button>
+            <p id="chuan"></p>
+            <button class="btn" onclick="wang()">B题</button>
+            <p id="wang"></p>
+            <button class="btn" onclick="qi()">C题</button>
+            <p id="qi"></p>
         </form> 
 </section>
 </section>
