--- a/user.html
+++ b/user.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/user.css">
-    <title>声情并茂 | 首页</title>
+    <link rel="shortcut icon" href="favicon.ico" />
+    <title>声情并茂 | 用户</title>
 </head>
 <body>
     <!-- 网页头部 -->
