--- a/user.html
+++ b/user.html
@@ -15,27 +15,12 @@
             <img src="./img/logo.png" alt="陈烁天的网页" height="50px">
             <ul>
                 <li><a  href="index.html">首页</a></li>
-                <li><a href="start.html">开始</a></li>
-                <li><a class="now" href="user.html">注册</a></li>
+                <li><a  href="index.html">本站已关闭</a></li>
                 <li><p id="uname"></p></li>
 
             </ul>
         </nav>
     </header>
-    <section id="contact-form" class="py">
-        <div class="clear"></div>
-        <form>
-            <div class="form-group">
-                <label for"name">姓名
-                <input type="text" name="name" id="name"></label>
-            </div>
-            <div class="form-group">
-                <label for"num">学号
-                <input type="text" name="num" id="num"></label>
-            </div>
-            <p id="error"></p>
-            <button type="button" class="btn" onclick="formResults(this.form)">提交</button>
-            </form>
     </section>
     <section>
         <div id="a"></div><button type="button" class="btn" onclick="btn()">幸运大转盘</button>
