--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <section>
         <div class="guize">
             <h1>关站通知</h1>
-            <p>由于游戏已经结束，本站即将关闭，只留下了“幸运大转盘”功能，想见查看<a href="user.html">幸运大转盘页面</a></p>
+            <p>由于游戏已经结束，本站即将关闭，只留下了“幸运大转盘”功能，详见查看https://xuhiang.github.io/-/user.html</p>
         <div class="font1"><span class="icon-gamepad"></span><p>很有意思</p></div>
         <div class="font2"><span class="icon-hammer2"></span><p>规则公平</p></div>
         <div class="font1"><span class="icon-gamepad"></span><p>科技感强</p></div>
